--- a/.github/workflows/Azure-function-App.yml
+++ b/.github/workflows/Azure-function-App.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout code
@@ -30,7 +30,7 @@ jobs:
     - name: Deploy to Azure Function App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: GlobalIAPSFunctionsPreProd  # Replace with your Function App name
+        app-name: 'GlobalIAPSFunctionsPreProd'  # Replace with your Function App name
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
         package: ./publish
 
