--- a/.github/workflows/Azure-function-App.yml
+++ b/.github/workflows/Azure-function-App.yml
@@ -25,12 +25,12 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Publish the project
-      run: dotnet publish --configuration Release --output ./publish
+      run: dotnet publish --configuration Release --output ./vendortelecp/globaliapsfunctions/bin/release/net8.0/publish
 
     - name: Deploy to Azure Function App
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'GlobalIAPSFunctionsPreProd'  # Replace with your Function App name
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-        package: ./publish
+        package: ./vendortelecp/globaliapsfunctions/bin/release/net8.0/publish
 
